
The rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - don't reproduce every subversion log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format) and do not
    use tabs but use spaces for formatting	 

------------------------------------------------------------------------------

??/??/?? danny.parton, jandom, orbeckst, jjlights03

  * 0.8 (?)

  Enhancements

  * multithreaded distance_array() (Issue 80, experimental); see the 
    new core.parallel.distance module
  * MDAnalysis.analysis.rms for simple RMSD analysis
  * format of input coordinates can be set as (filename, format)
    tuples (Issue 76)    

  Fixes

  * fixed Issue 115 (GROReader now uses fixed-column width format to read GRO files)


06/30/12 orbeckst, joshua.adelman, andy.somogyi, tyler.je.reddy, lukas.grossar, denniej0, danny.parton

  * 0.7.6 

  Enhancements

  * GRO file velocities may be accessed as AtomGroup.velocities()
    or Atom.velocity (Issue 102)
  * PrimitivePDBReader can be sliced
  * AMBER NetCDF (binary trajectory) reader and writer, supporting
    coordinates and velocities; requires netcdf4-python (Issue 109)
  * additional attributes and methods for AtomGroup to consolidate
    the interface to the Timestep: attribute 'positions' and 
    'get_positions()' can be used instead of the 'coordinates()' 
    method. get/set methods for both positions and velocities.
  * almost all Readers now support some form of slicing; unsupported
    slicing operations will raise a TypeError  
  * additional analysis for Nucleic Acid order parameters 
    (MDAnalysis.analysis.nuclinfo) 
  * AMBER TOPParser now able to do both amber10 and amber12 formats 
    (Issue 100)
 
  Changes

  * HydrogenBondAnalysis: multiple enhancements and changes (Issue 103)
    - many new analysis functions (see docs)
    - run() does not return the results anymore; results are simply