@@ -40,7 +40,7 @@ Chronological list of authors
   - Andy Somogyi
   - Lukas Stelzl
   - Jinju Lu
-
+  - Joshua L. Phillips
 
 External code
 -------------
