@@ -11,7 +11,7 @@ The rules for this file:
 
 ------------------------------------------------------------------------------
 
-??/??/?? danny.parton, jandom, orbeckst, jjlights03
+??/??/?? danny.parton, jandom, orbeckst, jjlights03, jphillips
 
   * 0.8 (?)
 
@@ -21,7 +21,9 @@ The rules for this file:
     new core.parallel.distance module
   * MDAnalysis.analysis.rms for simple RMSD analysis
   * format of input coordinates can be set as (filename, format)
-    tuples (Issue 76)    
+    tuples (Issue 76) 
+  * new AtomGroup.asphericity() and AtomGroup.shapeParameter()   
+    methods to compute shape descriptors.
 
   Fixes
 
